# beater

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  REQUIREMENTS.md  action.yml
.claude/skills/review-pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apple-container-build.yml  backend.yml  browser.yml  container-images.yml  dashboard-ui.yml  eval-gate-action.yml  frontend.yml  gate2-proof-contract.yml  merge-e2e.yml  sdk-contract.yml
bins/beaterctl/: Cargo.toml
bins/beaterctl/src/: main.rs
bins/beaterctl/tests/: audit_fixture.rs  calibration_fixture.rs  (+5 more)
bins/beaterd/: Cargo.toml
crates/beater-alerts/: Cargo.toml
crates/beater-alerts/src/: lib.rs
crates/beater-api/: Cargo.toml
crates/beater-archive/: Cargo.toml
crates/beater-archive/src/: lib.rs
crates/beater-archive/tests/: orphan_sweeper.rs
crates/beater-audit/: Cargo.toml
crates/beater-auth/: Cargo.toml
crates/beater-browser/: Cargo.toml
crates/beater-bus/: Cargo.toml
crates/beater-bus/src/: lib.rs
crates/beater-calibration/: Cargo.toml
crates/beater-core/: Cargo.toml
crates/beater-datasets/: Cargo.toml
crates/beater-eval/: Cargo.toml
crates/beater-experiments/: Cargo.toml
crates/beater-gates/: Cargo.toml
crates/beater-human/: Cargo.toml
crates/beater-ingest/: Cargo.toml
crates/beater-judge/: Cargo.toml
crates/beater-otlp/: Cargo.toml
crates/beater-otlp/src/: lib.rs
crates/beater-replay/: Cargo.toml
crates/beater-sandbox/: Cargo.toml
crates/beater-schema/: Cargo.toml
crates/beater-search/: Cargo.toml
crates/beater-secrets/: Cargo.toml
crates/beater-security/: Cargo.toml
crates/beater-security/src/: lib.rs
crates/beater-store/: Cargo.toml
crates/beater-store-obj/: Cargo.toml
crates/beater-store-obj/src/: lib.rs
crates/beater-store-sql/: Cargo.toml
crates/beater-store-sql/src/: clickhouse.rs  lib.rs
crates/beater-usage/: Cargo.toml
docs/: api-stability-policy.md  architecture-status.md  composio.md  feature-matrix.md  local-dev.md  merge-queue.md  offline-self-host.md  sdk-platform-architecture.md  security-regression-fixtures.md
docs/demos/: gate2-browser-demo.md  gate2-browser-demo.webm  gate2-compose-browser-demo.md  gate2-compose-browser-demo.webm  gate2-compose-stopwatch.md  gate2-outside-person-proof.md  gate2-outside-runner-card.md
docs/engineering/: rfc-agent-math-model.md  shared-logic-audit.md
examples/: README.md  check-examples.sh  smoke-manifest.json
examples/python/: five_line_otel.py
examples/rust/: axum_app.rs  mcp_app.rs  reqwest_app.rs  tonic_app.rs  tracing_app.rs
scripts/: check-contract-sync.sh  check-doc-paths.sh  check-feature-matrix-contract.py  check-gate0-foundations.py  check-gate2-outside-readiness.py  check-gate2-public-handoff.py  check-sdk-parity-contract.py  check-sdk-parity.sh  check-sdk-platform-docs.py  check-shared-logic-audit.py  e2e-clients-live.sh  e2e-merge-gate.sh  gate2-compose-stopwatch.sh  gate2-outside-local-preflight.sh  gate2-outside-run.sh  gate2-proof.sh  gate2_proof_contract.py  gate2_proof_observations.py  generate-gate2-outside-proof.py  regen-sdks.sh  seed-gate2-redaction-trace.py  validate-gate2-outside-proof.sh
scripts/gate-action/: render_verdict.py  test_render.py
scripts/tests/: test_check_contract_sync.py  test_container_runtime.py
sdks/: README.md
sdks/config/: php.yaml
sdks/conformance/: parity-manifest.json  surface-manifest.json
sdks/openapi/: beater-api.json
sdks/python/: README.md  pyproject.toml
web/dashboard/: README.md  VERCEL.md  package-lock.json  package.json  proxy.ts
(+857 files in other folders)
