[package]
name = "beater-alerts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
beater-security = { path = "../beater-security" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
