[package]
name = "beater-otlp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beater-core = { path = "../beater-core" }
beater-ingest = { path = "../beater-ingest" }
beater-schema = { path = "../beater-schema" }
chrono.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
serde_json.workspace = true

[lints]
workspace = true
