[package]
name = "beater-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
beater-core = { path = "../beater-core" }
chrono.workspace = true
hmac.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
