[package]
name = "beater-store-sql"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
beater-store = { path = "../beater-store" }
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
beater-store-obj = { path = "../beater-store-obj" }
chrono.workspace = true
tokio.workspace = true

[lints]
workspace = true
